--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "app.ts",
 	"scripts": {
 		"test": "test",
-		"start": "nodemon app.ts"
+		"start": "nodemon app.ts",
+		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
 	},
 	"author": "Adil K.",
 	"license": "ISC",
@@ -13,11 +14,14 @@
 		"@types/bcrypt": "^5.0.0",
 		"@types/express": "^4.17.17",
 		"@types/jsonwebtoken": "^9.0.2",
+		"@types/multer": "^1.4.7",
 		"@typescript-eslint/eslint-plugin": "^5.59.6",
 		"@typescript-eslint/parser": "^5.59.6",
 		"eslint": "^8.40.0",
+		"eslint-plugin-prettier": "^4.2.1",
 		"nodemon": "^2.0.22",
 		"ts-node": "^10.9.1",
+		"typedoc": "^0.24.7",
 		"typescript": "^5.0.4"
 	},
 	"dependencies": {
@@ -26,6 +30,7 @@
 		"express": "^4.18.2",
 		"express-jwt": "^8.4.1",
 		"jsonwebtoken": "^9.0.0",
-		"mongoose": "^7.1.2"
+		"mongoose": "^7.1.2",
+		"multer": "^1.4.5-lts.1"
 	}
 }
